--- a/startGame.html
+++ b/startGame.html
@@ -40,7 +40,7 @@
         <div id="game-design">
           <div id="vert-num">
             顶点数量：
-            <select class="">
+            <select class="numAmount">
               <option value="3">3</option>
               <option value="4">4</option>
               <option value="5">5</option>
@@ -209,6 +209,8 @@
     </div>
   </div>
   <script src="/dist/js/gameSetting.js"></script>
+  <script src="/dist/js/drawCanvas.js"></script>
+  <script src="/dist/js/main.js"></script>
 </body>
 
 </html>
