--- a/startGame.html
+++ b/startGame.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/dist/css/icon.css">
-  <link rel="stylesheet" href="/dist/css/default.css">
-  <link rel="stylesheet" href="/dist/css/flat-ui.min.css">
-  <link rel="stylesheet" href="/dist/css/main.css">
+  <!-- <link rel="stylesheet" href="./dist/css/icon.css"> -->
+  <link rel="stylesheet" href="./dist/css/icon.css">
+  <link rel="stylesheet" href="./dist/css/default.css">
+  <link rel="stylesheet" href="./dist/css/flat-ui.min.css">
+  <link rel="stylesheet" href="./dist/css/main.css">
 
   <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <title>Document</title>
@@ -208,10 +209,10 @@
       </div>
     </div>
   </div>
-  <script src="/dist/js/GameSetting.js"></script>
-  <script src="/dist/js/DrawCanvas.js"></script>
-  <script src="/dist/js/Main.js"></script>
-  <script src="/dist/js/MinMax.js"></script>
+  <script src="./dist/js/GameSetting.js"></script>
+  <script src="./dist/js/DrawCanvas.js"></script>
+  <script src="./dist/js/Main.js"></script>
+  <script src="./dist/js/MinMax.js"></script>
 </body>
 
 </html>
